tests/array/array_construction_errors.err.expected
error: at 23:5: [TC-ArrayLitElementTypeMismatch] In function 'wrong_element_type', block 'entry': Array literal element 1 has type i32, expected i64
    |
 22 |   entry:
 23 |     a = [1i64, 2i32];
    |     ^^^^^^^^^^^^^^^^
 24 |     return
    |
error: at 35:5: [TC-AssignmentTypeMismatch] In function 'wrong_length', block 'entry': Type mismatch in assignment. LHS is [i64; 3], RHS is [i64; 2]
    |
 34 |   entry:
 35 |     a = [1i64, 2i64];
    |     ^^^^^^^^^^^^^^^^
 36 |     return
    |
